--- a/static/css/index.css
+++ b/static/css/index.css
@@ -108,7 +108,7 @@ nav {
     }
 
     .pos {
-        margin-right: 20px;
+        margin: 0 auto auto;
     }
 
     .stat {
@@ -118,7 +118,7 @@ nav {
     }
 
     .stat__descript>.per__sent {
-        width: 40px;
+        width: 50px;
     }
 }
 
@@ -143,6 +143,6 @@ nav {
     }
 
     .stat__descript>.per__sent {
-        width: 80px;
+        width: 90px;
     }
 }
